v2.12.16: fixes blockchain icons on checkout page (on Safari and iPhone)

--- a/assets/css/depay.css
+++ b/assets/css/depay.css
@@ -9,6 +9,7 @@
 .wc-depay-blockchain-icon {
   margin-left: .25em;
   max-height: 28px;
+  max-width: 28px;
 }
 
 .wc-block-checkout__payment-method .wc-block-components-radio-control__label>span {
